_archive/content-services/5.1/concepts/install-integrations-overview.md
---
author: [Alfresco Documentation, Alfresco Documentation]
audience: 
category: Installation
---

# Installing Alfresco integrations

Use this information to install any components or modules that integrate Alfresco to other applications.

|Module or Integration|Additional information|Link|
|---------------------|----------------------|----|
|Alfresco EMC Centera Connector|Paid add-on module. Install with an AMP file in Alfresco and install the EMC Centera SDK. Requires additional software.|[Installing and configuring the Alfresco EMC Centera Connector](centera-intro.md)|
|Alfresco Kofax Release script|Install with an AMP in Alfresco and binary files in Kofax.|[Installing and configuring Alfresco Kofax Integration](kofax-intro.md)|
|Alfresco Office Services|AMP installed as part of the standard Alfresco install.|External link: [Installing and configuring Alfresco Office Services](http://docs.alfresco.com/aos1.1/concepts/aos-config-intro.html)|
|Alfresco Outlook Integration|Paid add-on module. Install with AMPs in Alfresco and a zip file in Microsoft Outlook.|External link: [Installing and configuring Alfresco Outlook Integration](http://docs.alfresco.com/outlook2.4/concepts/Outlook-install-intro.html)|
|Alfresco Media Management|Paid add-on module that requires additional software. Install with AMPs.|External link: [Installing and configuring Alfresco Media Management](http://docs.alfresco.com/mm1.0/concepts/mm-install-overview.html)|
|Alfresco Records Management|Paid add-on module. Install with AMPs.|External link: [Installing Alfresco Records Management](http://docs.alfresco.com/rm2.5/tasks/rm-install-proc.html)|
|Alfresco S3 Connector|Paid add-on module. Install with an AMP file.|External link: [Installing and configuring Alfresco S3 Connector](http://docs.alfresco.com/s3connector2.1/concepts/s3-contentstore-install-intro.html)|
|Alfresco Transformation Server|Paid add-on module. Install with AMP files in Alfresco and and an MSI package on the standalone Transformation Server.|[Installing and configuring the Document Transformation Server](transerv-intro.md)|
|Alfresco Web Quick Start|Can be installed as part of the standard Alfresco install \(Advanced option\).|[Installing and configuring Alfresco Web Quick Start](WCM-intro.md)|
|Google Docs Integration|AMP installed as part of the standard Alfresco install.|[Installing and configuring Google Docs integration](googledocs-intro.md)|

-   **[Installing and configuring the Alfresco EMC Centera Connector](../concepts/centera-intro.md)**  
Use this information to install and configure the Alfresco EMC Centera Connector module. It also lists the prequisites for setting up the EMC Centera environment on Windows and Linux platforms.
-   **[Installing and configuring Alfresco Kofax Integration](../concepts/kofax-intro.md)**  

-   **[Installing and configuring Alfresco Office Services](../concepts/aos-intro.md)**  
Alfresco Office Services \(AOS\) allow you to access Alfresco directly from all your Microsoft Office applications.
-   **[Installing and configuring Alfresco Outlook Integration](../concepts/Outlook-install-intro.md)**  
Alfresco Outlook Integration is an extension to Alfresco and Microsoft Outlook, that allows you to save and file your emails to Alfresco in Microsoft Outlook, in a centralized and structured way.
-   **[Installing and configuring the Document Transformation Server](../concepts/transerv-intro.md)**  
Use this information to install and configure the Document Transformation Server.
-   **[Installing and configuring Alfresco Web Quick Start](../concepts/WCM-intro.md)**  
 The Alfresco repository provides an implementation for WCM called Web Quick Start \(WQS\).
-   **[Installing and configuring Google Docs integration](../concepts/googledocs-intro.md)**  
Google Docs integration allows you to use Google Docs to edit document content stored in Alfresco, as an alternative to the online and offline editing capabilities in Alfresco Share.

**Parent topic:**[Installing](../concepts/master-ch-install.md)

