_archive/content-services/5.2/concepts/install-integrations-overview.md
---
author: [Alfresco Documentation, Alfresco Documentation]
---

# Installing integrations

Use this information to install any components or modules that integrate Alfresco Content Services to other applications.

|Module or Integration|Additional information|Link|
|---------------------|----------------------|----|
|Alfresco Content Connector for EMC Centera|Paid add-on module. Install with an AMP file in Alfresco Content Services and install the EMC Centera SDK. Requires additional software.|[Installing and configuring the Alfresco Content Connector for EMC Centera](centera-intro.md)|
|Alfresco Kofax Integration|Install with an AMP in Alfresco Content Services and binary files in Kofax.|[Installing and configuring the Alfresco Kofax Integration](kofax-intro.md)|
|Alfresco Office Services|AMP installed as part of the standard Alfresco Content Services install.|External link: [Installing and configuring Alfresco Office Services](https://docs.alfresco.com/aos1.1/concepts/aos-config-intro.html)|
|Alfresco Sync Service|Install with an AMP file.|External link: [Installing Sync Service](https://docs.alfresco.com/syncservice2.2/concepts/desktopsync-admin.html)|
|Alfresco Outlook Integration|Paid add-on module. Install with AMPs in Alfresco Content Services and a zip file in Microsoft Outlook.|External link: [Installing and configuring Alfresco Outlook Integration](https://docs.alfresco.com/outlook2.4/concepts/Outlook-install-intro.html)|
|SAML Single Sign-On \(SSO\) for Alfresco Content Services|Install with AMPs in Alfresco Content Services.|External link: [Installing SAML SSO in Alfresco](https://docs.alfresco.com/saml1.0/concepts/saml-config-overview.html)|
|Alfresco Media Management|Paid add-on module that requires additional software. Install with AMPs.|External link: [Installing and configuring Alfresco Media Management](https://docs.alfresco.com/mm1.1/concepts/mm-install-overview.html)|
|Alfresco Records Management|Paid add-on module. Install with AMPs.|External link: [Installing Alfresco Records Management](https://docs.alfresco.com/ags2.7/tasks/rm-install-proc.html)|
|Alfresco Content Connector for AWS S3|Paid add-on module. Install with an AMP file.|External link: [Installing and configuring the S3 Connector](https://docs.alfresco.com/s3connector2.1/concepts/s3-contentstore-install-intro.html)|
|Alfresco Document Transformation Engine|Paid add-on module. Install with AMP files in Alfresco Content Services and an MSI package on the standalone Transformation Server.|[Installing and configuring the Document Transformation Engine](transerv-intro.md)|
|Alfresco Web Quick Start|Can be installed as part of the standard Alfresco Content Services install \(Advanced option\).|[Installing and configuring Alfresco Web Quick Start](WCM-intro.md)|
|Google Docs Integration|AMP installed as part of the standard Alfresco Content Services install.|[Installing and configuring Google Docs Integration](googledocs-intro.md)|

-   **[Installing and configuring the Alfresco Content Connector for EMC Centera](../concepts/centera-intro.md)**  
Use this information to install and configure the Alfresco Content Connector for EMC Centera module. It also lists the prequisites for setting up the EMC Centera environment on Windows and Linux platforms.
-   **[Installing and configuring the Alfresco Kofax Integration](../concepts/kofax-intro.md)**  

-   **[Installing and configuring Alfresco Office Services](../concepts/aos-intro.md)**  
Alfresco Office Services \(AOS\) allow you to access Alfresco Content Services directly from all your Microsoft Office applications.
-   **[Installing and configuring Alfresco Outlook Integration](../concepts/Outlook-install-intro.md)**  
Alfresco Outlook Integration is an extension to Alfresco Content Services and Microsoft Outlook, that allows you to save and file your emails to Alfresco Content Services in Microsoft Outlook, in a centralized and structured way.
-   **[Installing and configuring the Document Transformation Engine](../concepts/transerv-intro.md)**  
Use this information to install and configure the Document Transformation Engine.
-   **[Installing and configuring Alfresco Web Quick Start](../concepts/WCM-intro.md)**  
 The Alfresco Content Services repository provides an implementation for WCM called Web Quick Start \(WQS\).
-   **[Installing and configuring Google Docs Integration](../concepts/googledocs-intro.md)**  
Google Docs Integration allows you to use Google Docs to edit document content stored in Alfresco Content Services, as an alternative to the online and offline editing capabilities in Alfresco Share.

**Parent topic:**[Installing](../concepts/master-ch-install.md)

